--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@mdi/js": "^7.4.47",
     "material-design-icons-iconfont": "^6.7.0",
     "vue": "^3.5.13",
+    "vue-material-design-icons": "^5.3.1",
     "vuetify": "^3.8.0-beta.0"
   },
   "devDependencies": {
